added glow bug, need to make emmit light

--- a/src/main/resources/assets/moogsmobs/lang/en_us.json
+++ b/src/main/resources/assets/moogsmobs/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.moogsmods.chomper_spawn_egg": "Chomper Spawn Egg"
+  "item.moogsmobs.chomper_spawn_egg": "Chomper Spawn Egg",
+  "item.moogsmobs.glow_bug_spawn_egg": "Glow Bug Spawn Egg"
 }
