fixed glowbug animations and renamed all glow_bug to glowbug

--- a/src/main/resources/assets/moogsmobs/lang/en_us.json
+++ b/src/main/resources/assets/moogsmobs/lang/en_us.json
@@ -1,4 +1,4 @@
 {
   "item.moogsmobs.chomper_spawn_egg": "Chomper Spawn Egg",
-  "item.moogsmobs.glow_bug_spawn_egg": "Glow Bug Spawn Egg"
+  "item.moogsmobs.glowbug_spawn_egg": "Glow Bug Spawn Egg"
 }
