--- a/src/main/resources/assets/moogsmobs/lang/en_us.json
+++ b/src/main/resources/assets/moogsmobs/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "item.moogsmobs.chomper_spawn_egg": "Chomper Spawn Egg",
-  "item.moogsmobs.glowbug_spawn_egg": "Glow Bug Spawn Egg"
+  "item.moogsmobs.glowbug_spawn_egg": "Glow Bug Spawn Egg",
+  "block.moogsmods.fluorescent_lantern": "Fluorescent Lantern"
 }
