fixes and capling_spawn_egg.json

--- a/src/main/resources/assets/moogsmobs/lang/en_us.json
+++ b/src/main/resources/assets/moogsmobs/lang/en_us.json
@@ -1,7 +1,7 @@
 {
   //eggs
   "item.moogsmobs.glowbug_spawn_egg": "Glow Bug Spawn Egg",
-  "item.moogsmods.capling_Spawn_egg": "Capling Spawn Egg",
+  "item.moogsmobs.capling_spawn_egg": "Capling Spawn Egg",
 
   //items
   "item.moogsmobs.bioluminescence": "Bioluminescence",
