started adding ShroudbreakerManual and made gray capling variant into its own mob, death_capling

--- a/src/main/resources/assets/moogsmobs/lang/en_us.json
+++ b/src/main/resources/assets/moogsmobs/lang/en_us.json
@@ -2,6 +2,7 @@
   //eggs
   "item.moogsmobs.glowbug_spawn_egg": "Glow Bug Spawn Egg",
   "item.moogsmobs.capling_spawn_egg": "Capling Spawn Egg",
+  "item.moogsmobs.death_capling_spawn_egg": "Death Capling Spawn Egg",
 
   //items
   "item.moogsmobs.bioluminescence": "Bioluminescence",
