fixed a capital letter

--- a/src/main/resources/assets/moogsmobs/lang/en_us.json
+++ b/src/main/resources/assets/moogsmobs/lang/en_us.json
@@ -30,7 +30,7 @@
   "block.moogsmobs.polished_exposed_copper_deepslate": "Polished Exposed Copper Deepslate",
   "block.moogsmobs.polished_oxidized_copper_deepslate": "Polished Oxidized Copper Deepslate",
   "block.moogsmobs.polished_weathered_copper_deepslate": "Polished Weathered Copper Deepslate",
-  "block.moogsmobs.brass_polished_deepslate": "Brass polished Deepslate",
+  "block.moogsmobs.brass_polished_deepslate": "Brass Polished Deepslate",
   "block.moogsmobs.copper_deepslate_pillar": "Copper Deepslate Pillar",
   "block.moogsmobs.exposed_copper_deepslate_pillar": "Exposed Copper Deepslate Pillar",
   "block.moogsmobs.weathered_copper_deepslate_pillar": "Weathered Copper Deepslate Pillar",
