--- a/src/main/resources/assets/moogsmobs/lang/en_us.json
+++ b/src/main/resources/assets/moogsmobs/lang/en_us.json
@@ -38,7 +38,7 @@
   "block.moogsmobs.gilded_deepslate_pillar": "Gilded Deepslate Pillar",
   "block.moogsmobs.runic_gilded_deepslate_pillar": "Runic Gilded Deepslate Pillar",
   "block.moogsmobs.brass_deepslate_pillar": "Brass Deepslate Pillar",
-  "block.moogsmobs.copper_deepslate_tiles": "Copper Deepslate Pillar",
+  "block.moogsmobs.copper_deepslate_tiles": "Copper Deepslate Tiles",
   "block.moogsmobs.exposed_copper_deepslate_tiles": "Exposed Copper Deepslate Tiles",
   "block.moogsmobs.weathered_copper_deepslate_tiles": "Weathered Copper Deepslate Tiles",
   "block.moogsmobs.oxidized_copper_deepslate_tiles": "Oxidized Copper Deepslate Tiles",
